[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/root/Root.gd" type="Script" id=1]
[ext_resource path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" type="Script" id=2]
[ext_resource path="res://scenes/config/ConfigPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/root/Viewport.gd" type="Script" id=4]
[ext_resource path="res://resources/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes/root/FileSystemPopup.gd" type="Script" id=6]
[ext_resource path="res://addons/godot-accessibility/ScreenReader.gd" type="Script" id=7]
[ext_resource path="res://scenes/no_theme/NoTheme.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "// Source: https://kidscancode.org/godot_recipes/shaders/blur/

shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 2.0

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
size = Vector2( 1024, 576 )
size_2d_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="NoTheme" parent="SubViewportContainer/SubViewport" instance=ExtResource( 10 )]
focus_mode = 2

[node name="DarkenOverlay" type="ColorRect" parent="."]
visible = false
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2

[node name="ConfigPopup" parent="." instance=ExtResource( 3 )]
exclusive = true

[node name="FileSystemPopup" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -208.5
offset_right = 376.0
offset_bottom = 208.5
focus_mode = 2
theme = ExtResource( 5 )
window_title = "Open a File"
mode = 0
access = 2
script = ExtResource( 6 )

[node name="WarningPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -173.0
offset_right = 304.0
offset_bottom = 173.0
focus_mode = 2
theme = ExtResource( 5 )

[node name="WarningLabel" type="Label" parent="WarningPopup"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -44.0
text = "
"
align = 1
valign = 1
autowrap = true

[node name="Keyboard" type="PopupPanel" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 586.0
offset_bottom = 278.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
autoShow = false

[node name="ScreenReader" type="Node" parent="."]
process_mode = 2
script = ExtResource( 7 )
theme_viewport = NodePath("../SubViewportContainer/SubViewport")

[connection signal="about_to_popup" from="ConfigPopup" to="." method="opened_popup"]
[connection signal="popup_hide" from="ConfigPopup" to="." method="closed_popup"]
[connection signal="about_to_popup" from="FileSystemPopup" to="." method="opened_popup"]
[connection signal="popup_hide" from="FileSystemPopup" to="." method="closed_popup"]
